--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     </title>
     <meta charset= "utf-8">
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/brownie.html">Classic Chewy Brownie</a>
+    <strong><h1>Odin Recipes</h1></strong>
+    <img src="recipes/Images/dessertsmain.jpeg" alt="a picture of chocolate mousse pots" />
+    <ul>
+        <strong><H2><li><a href="recipes/brownie.html">Classic Chewy Brownie</a></li></H2></strong>
+        <strong><H2><li><a href="recipes/caramelisedappletart.html">Caramelised Apple Tart</a></li></H2></strong> 
+        <strong><H2><li><a href="recipes/chocolatehazelnutmousse.html">Chocolate Hazelnut Mousse</a></li></H2></strong>
 
+</ul>
 </body>
 </head>
 
